Added team win-loss plot

--- a/DataStory/European Leagues.ipynb
+++ b/DataStory/European Leagues.ipynb
@@ -805,8 +805,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Keeping with the trends, the two giants enjoy a considerably large (11 to 14) home win to loss ratio. Even if we consider draws, FC Barcelona and Real Madrid win at least 5 times more games at home than lose or draw. Following these two is FC Bayern Munich (from Germany) which also wins 4 times more than lose or draw. Other big teams "
+    "Keeping with the trends, the two giants enjoy a considerably large (11 to 14) home win to loss ratio. Even if we consider draws, FC Barcelona and Real Madrid win at least 5 times more games at home than lose or draw. Following these two is FC Bayern Munich (from Germany) which also wins 4 times more than lose or draw. \n",
+    "\n",
+    "Other big teams in the top 15 also have significantly large (4+) home win to loss ratio. However, the home win to (loss or draw) ratio is slightly loewr (1.5 to 4). This shows that if we were to carry out the analyses by considering a draw to the number of wins list as opposed to the loss list, we would get a much higher ratio than the one right now.\n",
+    "\n",
+    "These could also "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
