--- a/InferentialStatistics/statistics project 1/sliderule_dsi_inferential_statistics_exercise_1.ipynb
+++ b/InferentialStatistics/statistics project 1/sliderule_dsi_inferential_statistics_exercise_1.ipynb
@@ -287,8 +287,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.  At what temperature should we consider someone's temperature to be \"abnormal\"?\n",
+    "\n",
+    "We calculate a confidence interval on the true population average temperature. If someone's temperature is out of this interval, we could say that the temprerature is abnormal."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 120,
    "metadata": {
     "collapsed": false
    },
@@ -296,40 +305,40 @@
     {
      "data": {
       "text/plain": [
-       "[98.123194112228518, 98.375267426233037]"
+       "[98.14345000353245, 98.355011534929105]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sigma_e = sample_sd/np.sqrt(num_obs)\n",
-    "margin = 1.96*sigma_e\n",
+    "margin = 1.645*sigma_e #95% confidence\n",
     "confidence_interval = [sample_mean-margin,sample_mean+margin]\n",
     "confidence_interval\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-114-db4d84e599e7>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-114-db4d84e599e7>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    len(df[(df.temperature < 98.1231) and (df.temperature > 98.375) )\u001b[0m\n\u001b[1;37m                                                                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "115\n",
+      "130\n"
      ]
     }
    ],
    "source": [
     "stats.norm.interval(.95,loc=sample_mean,scale=sample_sd/np.sqrt(num_obs))\n",
-    "len(df[(df.temperature < 98.1231) and (df.temperature > 98.375) )\n",
+    "print len(df[(df.temperature < 98.1231) | (df.temperature > 98.375)])\n",
     "print num_obs"
    ]
   },
@@ -337,43 +346,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.  At what temperature should we consider someone's temperature to be \"abnormal\"?\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(98.122708866047532, 98.375752672414023)"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stats.norm.interval(.95,loc=sample_mean,scale=sigma_e)"
+    "Problem : We observe that 115 out of a otal 130 are out of this range. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hence, we can say that if someone's temperatut'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 4. Is there a significant difference between males and females in normal temperature?\n",
+    "### 4. Is there a significant difference between males and females in normal temperature?\n",
     "\n",
     "We have two different samples and we do not know the population standard deviation. Hence, a two sample t-test seems to be the right test to use. The test measures whether the average (expected) value differs significantly across samples."
    ]
