--- a/InferentialStatistics/statistics project 1/sliderule_dsi_inferential_statistics_exercise_1.ipynb
+++ b/InferentialStatistics/statistics project 1/sliderule_dsi_inferential_statistics_exercise_1.ipynb
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the histogram, we can see that the distribution looks normal but it is skewed to the right. Also, there seems to be another small peak at around x=100 which isn't characteristic of a normal distribution. There might be two modes. Also, the q-q plot seems to waver towards the ends suggesting that it isn't completely a perfect normal distribution."
+    "From the histogram, we can see that the distribution looks normal but it is skewed to the right. Also, there seems to be another small peak at around x=100 which isn't characteristic of a normal distribution (there might be two modes?). Also, the q-q plot seems to waver towards the ends suggesting that it isn't a perfect normal distribution."
    ]
   },
   {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -221,29 +221,6 @@
     "print \"Number of observations :\", num_obs\n",
     "print \"Sample mean : \", sample_mean\n",
     "print \"Sample standard deviation : \", sample_sd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "130 129\n"
-     ]
-    }
-   ],
-   "source": [
-    "from scipy.stats import t, norm\n",
-    "\n",
-    "num = df.shape[0]\n",
-    "n = num - 1\n",
-    "print num, n"
    ]
   },
   {
@@ -297,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false
    },
@@ -305,24 +282,24 @@
     {
      "data": {
       "text/plain": [
-       "[98.14345000353245, 98.355011534929105]"
+       "[98.123194112228518, 98.375267426233037]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sigma_e = sample_sd/np.sqrt(num_obs)\n",
-    "margin = 1.645*sigma_e #95% confidence\n",
+    "margin = 1.96*sigma_e #95% confidence\n",
     "confidence_interval = [sample_mean-margin,sample_mean+margin]\n",
     "confidence_interval\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 125,
    "metadata": {
     "collapsed": false
    },
@@ -331,14 +308,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(98.123196428181657, 98.375265110279898)\n",
       "115\n",
       "130\n"
      ]
     }
    ],
    "source": [
-    "stats.norm.interval(.95,loc=sample_mean,scale=sample_sd/np.sqrt(num_obs))\n",
-    "print len(df[(df.temperature < 98.1231) | (df.temperature > 98.375)])\n",
+    "print stats.norm.interval(.95,loc=sample_mean,scale=sample_sd/np.sqrt(num_obs))\n",
+    "print len(df[(df.temperature < 98.131) | (df.temperature > 98.375)])\n",
     "print num_obs"
    ]
   },
@@ -346,7 +324,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Problem : We observe that 115 out of a otal 130 are out of this range. "
+    "_Problem : We observe that 115 out of a otal 130 are out of this range. _\n",
+    "\n",
+    "So, we can say that, if someone's temperature is above 98.3752 or below 98.1231, then their temperature is considered abnormal.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# sigma_e = sample_sd/np.sqrt(num_obs)\n",
+    "# margin = 1.96*sigma_e #99% confidence\n",
+    "# confidence_interval = [sample_mean-margin,sample_mean+margin]\n",
+    "# confidence_interval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# print stats.norm.interval(.99,loc=sample_mean,scale=sample_sd/np.sqrt(num_obs))\n",
+    "# print len(df[(df.temperature < 98.08) | (df.temperature > 98.41)])\n",
+    "# print num_obs"
    ]
   },
   {
@@ -360,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false
    },
@@ -375,7 +383,7 @@
     }
    ],
    "source": [
-    "f_temp = np.array(df.temperature[df.gender=='F']) \n",
+    "f_temp = np.array(df.temperature[df.gender=='F'])\n",
     "m_temp = np.array(df.temperature[df.gender=='M'])\n",
     "\n",
     "print(len(m_temp))\n",
@@ -384,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 144,
    "metadata": {
     "collapsed": false
    },
@@ -395,7 +403,7 @@
        "Ttest_indResult(statistic=2.2854345381656103, pvalue=0.023931883122395609)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
