Poisson Reg Edited

--- a/Capstone Project/Classification_Adding_Shots.ipynb
+++ b/Capstone Project/Classification_Adding_Shots.ipynb
@@ -431,15 +431,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {
     "collapsed": false
@@ -581,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -598,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -609,30 +600,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HomeTeam</th>\n",
+       "      <th>AwayTeam</th>\n",
+       "      <th>FTR</th>\n",
+       "      <th>HST</th>\n",
+       "      <th>AST</th>\n",
+       "      <th>HAS</th>\n",
+       "      <th>HDS</th>\n",
+       "      <th>AAS</th>\n",
+       "      <th>ADS</th>\n",
+       "      <th>Result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>Aston Villa</td>\n",
+       "      <td>A</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.204013</td>\n",
+       "      <td>0.484581</td>\n",
+       "      <td>1.409692</td>\n",
+       "      <td>1.003344</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>Stoke</td>\n",
+       "      <td>H</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.772575</td>\n",
+       "      <td>0.792952</td>\n",
+       "      <td>2.114537</td>\n",
+       "      <td>1.070234</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Norwich</td>\n",
+       "      <td>Everton</td>\n",
+       "      <td>D</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.568562</td>\n",
+       "      <td>0.792952</td>\n",
+       "      <td>0.484581</td>\n",
+       "      <td>1.471572</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sunderland</td>\n",
+       "      <td>Fulham</td>\n",
+       "      <td>A</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.702341</td>\n",
+       "      <td>1.189427</td>\n",
+       "      <td>0.881057</td>\n",
+       "      <td>1.103679</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Swansea</td>\n",
+       "      <td>Man United</td>\n",
+       "      <td>A</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1.103679</td>\n",
+       "      <td>1.145374</td>\n",
+       "      <td>0.925110</td>\n",
+       "      <td>0.936455</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     HomeTeam     AwayTeam FTR  HST  AST       HAS       HDS       AAS  \\\n",
+       "0     Arsenal  Aston Villa   A    4    4  1.204013  0.484581  1.409692   \n",
+       "1   Liverpool        Stoke   H   11    4  1.772575  0.792952  2.114537   \n",
+       "2     Norwich      Everton   D    2    6  0.568562  0.792952  0.484581   \n",
+       "3  Sunderland       Fulham   A    3    1  0.702341  1.189427  0.881057   \n",
+       "4     Swansea   Man United   A    6    7  1.103679  1.145374  0.925110   \n",
+       "\n",
+       "        ADS  Result  \n",
+       "0  1.003344      -1  \n",
+       "1  1.070234       1  \n",
+       "2  1.471572       0  \n",
+       "3  1.103679      -1  \n",
+       "4  0.936455      -1  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "feature_table.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "X_train = feature_table[['HAS','HDS','AAS','ADS']]\n",
+    "X_train = feature_table[['HST','AST','HAS','HDS','AAS','ADS']]\n",
     "y_train = feature_table['Result']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -641,43 +743,73 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from xgboost import XGBClassifier\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import cross_val_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
+       "            max_features=None, max_leaf_nodes=None,\n",
+       "            min_impurity_split=1e-07, min_samples_leaf=1,\n",
+       "            min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "            presort=False, random_state=None, splitter='best')"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "clf = DecisionTreeClassifier()\n",
-    "clf2.fit(X_train,y_train)\n",
+    "clf2 = MultinomialNB()\n",
     "clf3 = XGBClassifier()\n",
-    "clf3.fit(X_train,y_train)"
+    "clf.fit(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "y_pred = clf3.predict(X_train)\n",
-    "accuracy_score(y_pred,y_train)"
+    "# y_pred = clf3.predict(X_train)\n",
+    "accuracy_score(y_pred,y_train)\n",
+    "scores = cross_val_score(clf2, X_train, y_train, cv=10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.56410256  0.64102564  0.56410256  0.57894737  0.65789474  0.65789474\n",
+      "  0.65789474  0.65789474  0.54054054  0.75      ]\n",
+      "0.627029762556\n"
+     ]
+    }
+   ],
+   "source": [
+    "print scores\n",
+    "print scores.mean()"
+   ]
   }
  ],
  "metadata": {
