--- a/Capstone Project/Classification_Baseline.ipynb
+++ b/Capstone Project/Classification_Baseline.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating a baseline for classification\n",
+    "\n",
+    "\n",
+    "Notebook attempting to predict the result (Home win, away win, draw) of any fixture given the teams that are playing it based on their performance in the previous season. We use multiclass classification to predict the results of the matches. More feature engineering on the data might lead us to better results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -11,6 +21,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import scipy.stats as scipy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load the data"
    ]
   },
   {
@@ -57,8 +74,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleaning\n",
+    "\n",
+    "We do not need information about division, data, referee and the betting odds from various companies for this method. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -88,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -141,70 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('Arsenal',\n",
-       "     HomeTeam        AwayTeam  FTHG  FTAG FTR  HTHG  HTAG HTR  HS  AS  HST  \\\n",
-       " 0    Arsenal     Aston Villa     1     3   A     1     1   D  16   9    4   \n",
-       " 27   Arsenal       Tottenham     1     0   H     1     0   H  12  14    5   \n",
-       " 46   Arsenal           Stoke     3     1   H     2     1   H  16   9    8   \n",
-       " 70   Arsenal         Norwich     4     1   H     1     0   H  20  12   11   \n",
-       " 90   Arsenal       Liverpool     2     0   H     1     0   H  12  12    7   \n",
-       " 110  Arsenal     Southampton     2     0   H     1     0   H   9  10    4   \n",
-       " 131  Arsenal            Hull     2     0   H     1     0   H  20   7    7   \n",
-       " 147  Arsenal         Everton     1     1   D     0     0   D  11  12    5   \n",
-       " 169  Arsenal         Chelsea     0     0   D     0     0   D   7  13    2   \n",
-       " 190  Arsenal         Cardiff     2     0   H     0     0   D  28   8    6   \n",
-       " 210  Arsenal          Fulham     2     0   H     0     0   D  22   8    8   \n",
-       " 237  Arsenal  Crystal Palace     2     0   H     0     0   D  11  10    6   \n",
-       " 254  Arsenal      Man United     0     0   D     0     0   D  17   6    5   \n",
-       " 258  Arsenal      Sunderland     4     1   H     3     0   H  12   7    9   \n",
-       " 301  Arsenal         Swansea     2     2   D     0     1   A  13   8    4   \n",
-       " 306  Arsenal        Man City     1     1   D     0     1   A  10  15    3   \n",
-       " 334  Arsenal        West Ham     3     1   H     1     1   D  14  12    8   \n",
-       " 356  Arsenal       Newcastle     3     0   H     2     0   H  20   8    8   \n",
-       " 364  Arsenal       West Brom     1     0   H     1     0   H  15  11    4   \n",
-       " \n",
-       "      AST  HF  AF  HC  AC  HY  AY  HR  AR  \n",
-       " 0      4  15  18   4   3   4   5   1   0  \n",
-       " 27     4  15  14   3   6   2   2   0   0  \n",
-       " 46     3   8  15   6   7   0   2   0   0  \n",
-       " 70     6   8   7  10   1   0   0   0   0  \n",
-       " 90     4  11   7   3   5   2   1   0   0  \n",
-       " 110    4  10  14   5   6   0   3   0   0  \n",
-       " 131    2   9   6  11   1   0   0   0   0  \n",
-       " 147    4  13  11   3   2   0   4   0   0  \n",
-       " 169    4   7  11   8   6   2   1   0   0  \n",
-       " 190    2   6  11  12   2   1   2   0   0  \n",
-       " 210    2   5   7   4   4   0   0   0   0  \n",
-       " 237    2   9  14   6   5   1   2   0   0  \n",
-       " 254    2  10  14   5   5   1   2   0   0  \n",
-       " 258    3  10  11   7   3   0   1   0   0  \n",
-       " 301    2  11  12   7   0   0   1   0   0  \n",
-       " 306    4   8  11   6   6   1   4   0   0  \n",
-       " 334    2  14  12   4   3   2   2   0   0  \n",
-       " 356    3   9   8  14   0   3   2   0   0  \n",
-       " 364    1   9   6   9  10   2   2   0   0  )"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(res_home)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -302,7 +265,7 @@
        "4  Crystal Palace   18   15  NaN  NaN   23   25  NaN  NaN"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -416,7 +379,7 @@
        "4  Crystal Palace   18   15  0.602007  0.660793   23   25  1.013216  0.836120"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -456,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -542,7 +505,7 @@
        "4     Swansea   Man United   A  1.103679  1.145374  0.925110  0.936455"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
@@ -570,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -581,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -673,7 +636,7 @@
        "4     Swansea   Man United   A  1.103679  1.145374  0.925110  0.936455      -1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
@@ -696,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -705,73 +668,62 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from xgboost import XGBClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.multiclass import OneVsRestClassifier\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'clf2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-19-172f81969ab2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mclf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDecisionTreeClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mclf2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mclf3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mXGBClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mclf3\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'clf2' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "           metric_params=None, n_jobs=1, n_neighbors=15, p=2,\n",
+       "           weights='uniform')"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "clf = DecisionTreeClassifier()\n",
-    "clf2.fit(X_train,y_train)\n",
-    "clf3 = XGBClassifier()\n",
+    "clf1 = DecisionTreeClassifier()\n",
+    "clf2 = XGBClassifier()\n",
+    "clf3 = KNeighborsClassifier(n_neighbors=15)\n",
     "clf3.fit(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.54736842105263162"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_pred = clf3.predict(X_train)\n",
     "accuracy_score(y_pred,y_train)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
