Adding feature nb

--- a/Capstone Project/Classification_Baseline.ipynb
+++ b/Capstone Project/Classification_Baseline.ipynb
@@ -101,6 +101,202 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HomeTeam</th>\n",
+       "      <th>AwayTeam</th>\n",
+       "      <th>FTHG</th>\n",
+       "      <th>FTAG</th>\n",
+       "      <th>HTHG</th>\n",
+       "      <th>HTAG</th>\n",
+       "      <th>HTR</th>\n",
+       "      <th>HS</th>\n",
+       "      <th>AS</th>\n",
+       "      <th>HST</th>\n",
+       "      <th>AST</th>\n",
+       "      <th>HF</th>\n",
+       "      <th>AF</th>\n",
+       "      <th>HC</th>\n",
+       "      <th>AC</th>\n",
+       "      <th>HY</th>\n",
+       "      <th>AY</th>\n",
+       "      <th>HR</th>\n",
+       "      <th>AR</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FTR</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>H</th>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "      <td>179</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     HomeTeam  AwayTeam  FTHG  FTAG  HTHG  HTAG  HTR   HS   AS  HST  AST   HF  \\\n",
+       "FTR                                                                             \n",
+       "A         123       123   123   123   123   123  123  123  123  123  123  123   \n",
+       "D          78        78    78    78    78    78   78   78   78   78   78   78   \n",
+       "H         179       179   179   179   179   179  179  179  179  179  179  179   \n",
+       "\n",
+       "      AF   HC   AC   HY   AY   HR   AR  \n",
+       "FTR                                     \n",
+       "A    123  123  123  123  123  123  123  \n",
+       "D     78   78   78   78   78   78   78  \n",
+       "H    179  179  179  179  179  179  179  "
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_13.groupby('FTR').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from math import log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "entropy = -((0.32 * log(0.32,3)) + (0.20 * log(0.20,3)) + (0.47 * log(0.47,3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.947893245378005"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "entropy"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 72,
    "metadata": {
     "collapsed": false,
