--- a/Capstone Project/Final Report/Final_Notebook.ipynb
+++ b/Capstone Project/Final Report/Final_Notebook.ipynb
@@ -1862,11 +1862,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-b2d843103e07>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#Extract necessary features from the data file\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mfeature_table\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mix\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m23\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#Full Time Result(FTR), Home Shots on Target(HST), Away Shots on Target(AST), Home Corners(HC), Away Corners(AC)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mfeature_table\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfeature_table\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'HomeTeam'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'AwayTeam'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'FTR'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'HST'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'AST'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'HC'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'AC'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Extract necessary features from the data file\n",
     "feature_table = df.ix[:,:23]\n",
@@ -1882,8 +1894,8 @@
     "for index,row in feature_table.iterrows():\n",
     "    f_HAS.append(table_13[table_13['Team'] == row['HomeTeam']]['HAS'].values[0])\n",
     "    f_HDS.append(table_13[table_13['Team'] == row['HomeTeam']]['HDS'].values[0])\n",
-    "    f_AAS.append(table_13[table_13['Team'] == row['HomeTeam']]['AAS'].values[0])\n",
-    "    f_ADS.append(table_13[table_13['Team'] == row['HomeTeam']]['ADS'].values[0])\n",
+    "    f_AAS.append(table_13[table_13['Team'] == row['AwayTeam']]['AAS'].values[0])\n",
+    "    f_ADS.append(table_13[table_13['Team'] == row['AwayTeam']]['ADS'].values[0])\n",
     "\n",
     "feature_table['HAS'] = f_HAS\n",
     "feature_table['HDS'] = f_HDS\n",
